db connected successfully

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT= 5001
 
 
-MONGO_URL = mongodb+srv://saravanakumar1634:BUOgbn9kGKvJqTTo@cluster0.jdqvwnc.mongodb.net/streamify_db?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://saravanakumar1634:BUOgbn9kGKvJqTTo@cluster0.jdqvwnc.mongodb.net/streamify_db?retryWrites=true&w=majority&appName=Cluster0
